--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -177,9 +177,9 @@ components:
       name: data_grid_2
       properties:
         columns:
-        - {data_key: column_1, id: JKSDUP, title: email}
-        - {data_key: column_2, id: VJQQOR, title: Navn}
-        - {data_key: column_3, id: OJLQEN, title: Poeng}
+        - {data_key: column_1, expand: false, id: JKSDUP, title: email, width: 130}
+        - {data_key: column_2, expand: false, id: VJQQOR, title: Navn, width: 161}
+        - {data_key: column_3, expand: false, id: OJLQEN, title: Poeng, width: 67.5}
         - {data_key: column_1, id: PJMSOR, title: Team}
         - {data_key: column_1, id: TTMEJE, title: ''}
       type: DataGrid
