--- a/anvil.yaml
+++ b/anvil.yaml
@@ -134,5 +134,5 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/email.yml
-startup: {module: Loggbok, type: form}
+startup: {module: EditDay, type: form}
 startup_form: null
