--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -178,9 +178,10 @@ components:
       properties:
         columns:
         - {data_key: column_1, expand: false, id: JKSDUP, title: email, width: 130}
-        - {data_key: column_2, expand: false, id: VJQQOR, title: Navn, width: 161}
+        - {data_key: column_2, expand: false, id: VJQQOR, title: Navn, width: 209}
         - {data_key: column_3, expand: false, id: OJLQEN, title: Poeng, width: 67.5}
         - {data_key: column_1, id: PJMSOR, title: Team}
+        - {data_key: column_4, expand: false, id: YKRMUE, title: Admin, width: 86.20001220703125}
         - {data_key: column_1, id: TTMEJE, title: ''}
       type: DataGrid
     layout_properties: {grid_position: 'LUWZDT,FGYWHF'}
