--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -34,6 +34,11 @@ components:
       name: konk_button
       properties: {role: tonal-button, text: Konkurranse}
       type: Button
+    - event_bindings: {click: button_5_click}
+      layout_properties: {}
+      name: button_5
+      properties: {role: tonal-button, text: Endringslogg}
+      type: Button
     layout_properties: {grid_position: 'PDOHFX,TLMROV'}
     name: flow_panel_1
     properties: {align: center}
