--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -92,306 +92,311 @@ components:
     properties: {align: center}
     type: FlowPanel
   - components:
-    - event_bindings: {click: button_2_click}
-      layout_properties: {}
-      name: button_2
-      properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: elevated-button, text: ''}
-      type: Button
-    - name: uke_label
-      properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
-      type: Label
-    - event_bindings: {click: button_1_click}
-      layout_properties: {}
-      name: button_1
-      properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: elevated-button, text: ''}
-      type: Button
-    layout_properties: {grid_position: 'JAWFBV,BDHRAR'}
-    name: flow_panel_2
-    properties: {align: center}
-    type: FlowPanel
-  - components:
     - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: man_label
-        properties:
-          align: center
-          font_size: 10
-          spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Mandag
-        type: Label
-      - event_bindings: {click: man_button_click}
-        layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
-        name: man_button
-        properties:
-          font_size: 25
-          foreground: black
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
+      - event_bindings: {click: button_2_click}
+        layout_properties: {}
+        name: button_2
+        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: elevated-button, text: ''}
         type: Button
-      - layout_properties: {grid_position: 'EBOSPB,PRGYBS'}
-        name: man_akt_label
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
+      - name: uke_label
+        properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
         type: Label
+      - event_bindings: {click: button_1_click}
+        layout_properties: {}
+        name: button_1
+        properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: elevated-button, text: ''}
+        type: Button
       layout_properties: {}
-      name: man_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', '15', '0', '15']
-      type: ColumnPanel
+      name: flow_panel_2
+      properties: {align: center}
+      type: FlowPanel
     - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: tir_label
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: man_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Mandag
+          type: Label
+        - event_bindings: {click: man_button_click}
+          layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
+          name: man_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'EBOSPB,PRGYBS'}
+          name: man_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: man_column_panel
         properties:
-          align: center
-          font_size: 10
+          role: elevated-card
           spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Tirsdag
-        type: Label
-      - event_bindings: {click: tir_button_click}
-        layout_properties: {grid_position: 'ZDBUKX,YNRDRQ'}
-        name: tir_button
+            padding: ['0', '15', '0', '15']
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: tir_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Tirsdag
+          type: Label
+        - event_bindings: {click: tir_button_click}
+          layout_properties: {grid_position: 'ZDBUKX,YNRDRQ'}
+          name: tir_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
+          name: tir_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: tir_column_panel
         properties:
-          font_size: 25
-          foreground: black
+          role: elevated-card
           spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
-        name: tir_akt_label
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: ons_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Onsdag
+          type: Label
+        - event_bindings: {click: ons_button_click}
+          layout_properties: {grid_position: 'IXYRQO,DGJJMZ'}
+          name: ons_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
+          name: ons_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: ons_column_panel
         properties:
-          align: center
-          font_size: 8
+          role: elevated-card
           spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'GDWDTW,YFBYQG QZJWKR,TQRGOL'}
+          name: tor_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Torsdag
+          type: Label
+        - event_bindings: {click: tor_button_click}
+          layout_properties: {grid_position: 'GDWDTW,YFBYQG QHWKSS,YBOXFJ'}
+          name: tor_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'GDWDTW,YFBYQG JUEBES,WOMSNG'}
+          name: tor_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: tor_column_panel
+        properties:
+          role: elevated-card
+          spacing:
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
       layout_properties: {}
-      name: tir_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
+      name: flow_panel_1
+      properties: {align: center}
+      type: FlowPanel
     - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: ons_label
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: fre_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Fredag
+          type: Label
+        - event_bindings: {click: fre_button_click}
+          layout_properties: {grid_position: 'IHPYUO,VXIBJA'}
+          name: fre_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
+          name: fre_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: fre_column_panel
         properties:
-          align: center
-          font_size: 10
+          role: elevated-card
           spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Onsdag
-        type: Label
-      - event_bindings: {click: ons_button_click}
-        layout_properties: {grid_position: 'IXYRQO,DGJJMZ'}
-        name: ons_button
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: lor_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Lørdag
+          type: Label
+        - event_bindings: {click: lor_button_click}
+          layout_properties: {grid_position: 'WZOHIV,NVIUBR'}
+          name: lor_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
+          name: lor_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: lor_column_panel
         properties:
-          font_size: 25
-          foreground: black
+          role: elevated-card
           spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
-        name: ons_akt_label
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+          name: son_label
+          properties:
+            align: center
+            font_size: 10
+            spacing:
+              margin: [null, null, '0', null]
+              padding: [null, null, '0', null]
+            text: Søndag
+          type: Label
+        - event_bindings: {click: son_button_click}
+          layout_properties: {grid_position: 'XGVADB,TGGYJY'}
+          name: son_button
+          properties:
+            font_size: 25
+            foreground: black
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', '12', '0', '12']
+            text: '0'
+          type: Button
+        - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
+          name: son_akt_label
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, null, null]
+              padding: ['0', null, null, null]
+            text: ''
+          type: Label
+        layout_properties: {}
+        name: son_column_panel
         properties:
-          align: center
-          font_size: 8
+          role: elevated-card
           spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
+            padding: ['0', null, '0', null]
+        type: ColumnPanel
       layout_properties: {}
-      name: ons_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
-    - components:
-      - layout_properties: {grid_position: 'GDWDTW,YFBYQG QZJWKR,TQRGOL'}
-        name: tor_label
-        properties:
-          align: center
-          font_size: 10
-          spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Torsdag
-        type: Label
-      - event_bindings: {click: tor_button_click}
-        layout_properties: {grid_position: 'GDWDTW,YFBYQG QHWKSS,YBOXFJ'}
-        name: tor_button
-        properties:
-          font_size: 25
-          foreground: black
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'GDWDTW,YFBYQG JUEBES,WOMSNG'}
-        name: tor_akt_label
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
-      layout_properties: {}
-      name: tor_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
-    layout_properties: {grid_position: 'ONEAGY,JGWVFE'}
-    name: flow_panel_1
-    properties: {align: center}
-    type: FlowPanel
-  - components:
-    - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: fre_label
-        properties:
-          align: center
-          font_size: 10
-          spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Fredag
-        type: Label
-      - event_bindings: {click: fre_button_click}
-        layout_properties: {grid_position: 'IHPYUO,VXIBJA'}
-        name: fre_button
-        properties:
-          font_size: 25
-          foreground: black
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
-        name: fre_akt_label
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
-      layout_properties: {}
-      name: fre_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
-    - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: lor_label
-        properties:
-          align: center
-          font_size: 10
-          spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Lørdag
-        type: Label
-      - event_bindings: {click: lor_button_click}
-        layout_properties: {grid_position: 'WZOHIV,NVIUBR'}
-        name: lor_button
-        properties:
-          font_size: 25
-          foreground: black
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
-        name: lor_akt_label
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
-      layout_properties: {}
-      name: lor_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
-    - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-        name: son_label
-        properties:
-          align: center
-          font_size: 10
-          spacing:
-            margin: [null, null, '0', null]
-            padding: [null, null, '0', null]
-          text: Søndag
-        type: Label
-      - event_bindings: {click: son_button_click}
-        layout_properties: {grid_position: 'XGVADB,TGGYJY'}
-        name: son_button
-        properties:
-          font_size: 25
-          foreground: black
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', '12', '0', '12']
-          text: '0'
-        type: Button
-      - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
-        name: son_akt_label
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, null, null]
-            padding: ['0', null, null, null]
-          text: ''
-        type: Label
-      layout_properties: {}
-      name: son_column_panel
-      properties:
-        role: elevated-card
-        spacing:
-          padding: ['0', null, '0', null]
-      type: ColumnPanel
-    layout_properties: {grid_position: 'BDMOUI,DWZCYC'}
-    name: flow_panel_6
-    properties: {align: center}
-    type: FlowPanel
+      name: flow_panel_6
+      properties: {align: center}
+      type: FlowPanel
+    layout_properties: {grid_position: 'LVOPXY,MUNUHX'}
+    name: week_row_panel
+    properties: {}
+    type: DataRowPanel
   - components:
     - event_bindings: {click: regler_button_click}
       layout_properties: {}
