Edited theme.css and Loggbok

--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -93,17 +93,17 @@ components:
     type: FlowPanel
   - components:
     - components:
-      - event_bindings: {click: button_2_click}
+      - event_bindings: {click: week_left_click}
         layout_properties: {}
-        name: button_2
+        name: week_left
         properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: elevated-button, text: ''}
         type: Button
       - name: uke_label
         properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
         type: Label
-      - event_bindings: {click: button_1_click}
+      - event_bindings: {click: week_right_click}
         layout_properties: {}
-        name: button_1
+        name: week_right
         properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: elevated-button, text: ''}
         type: Button
       layout_properties: {}
@@ -393,9 +393,11 @@ components:
       name: flow_panel_6
       properties: {align: center}
       type: FlowPanel
+    data_bindings:
+    - {code: '{"id": "week-content", "class": "week-slide"}', property: tag, writeback: false}
     layout_properties: {grid_position: 'LVOPXY,MUNUHX'}
     name: week_row_panel
-    properties: {}
+    properties: {visible: true}
     type: DataRowPanel
   - components:
     - event_bindings: {click: regler_button_click}
