--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -35,62 +35,72 @@ components:
   type: ColumnPanel
 - components:
   - components:
-    - layout_properties: {}
-      name: konkurransenavn
-      properties: {align: center}
-      type: Label
-    - layout_properties: {}
-      name: label_3
-      properties: {text: fra}
-      type: Label
-    - name: fradato
-      properties: {}
-      type: Label
-    - layout_properties: {}
-      name: label_4
-      properties: {text: til}
-      type: Label
-    - name: tildato
-      properties: {}
-      type: Label
-    layout_properties: {grid_position: 'LBOGKI,BNEKSN'}
-    name: flow_panel_9
-    properties: {align: center, role: null}
-    type: FlowPanel
-  - components:
-    - layout_properties: {}
-      name: lykkehjul
-      properties: {height: 50.79998779296875, source: _/theme/lykkehjul.jpg}
-      type: Image
     - components:
       - layout_properties: {}
-        name: label_1
-        properties: {text: 'Deltager:'}
+        name: konkurransenavn
+        properties: {align: center}
         type: Label
-      - components: []
-        event_bindings: {click: deltager_label_click}
-        layout_properties: {}
-        name: deltager_label
-        properties: {text: Donald Duck}
-        type: Link
-      name: flow_panel_4
-      properties: {}
+      - layout_properties: {}
+        name: label_3
+        properties: {text: fra}
+        type: Label
+      - name: fradato
+        properties: {}
+        type: Label
+      - layout_properties: {}
+        name: label_4
+        properties: {text: til}
+        type: Label
+      - name: tildato
+        properties: {}
+        type: Label
+      layout_properties: {grid_position: 'VRDIEX,CGEKVQ'}
+      name: flow_panel_9
+      properties: {align: center, role: null}
       type: FlowPanel
     - components:
-      - name: label_2
-        properties: {text: 'Team: '}
-        type: Label
-      - event_bindings: {click: team_label_click}
-        name: team_label
-        properties: {text: Donald Duck}
-        type: Link
-      name: flow_panel_10
-      properties: {}
+      - layout_properties: {}
+        name: lykkehjul
+        properties: {height: 50.79998779296875, source: _/theme/lykkehjul.jpg}
+        type: Image
+      - components:
+        - layout_properties: {}
+          name: label_1
+          properties: {text: 'Deltager:'}
+          type: Label
+        - components: []
+          event_bindings: {click: deltager_label_click}
+          layout_properties: {}
+          name: deltager_label
+          properties: {text: Donald Duck}
+          type: Link
+        name: flow_panel_4
+        properties: {}
+        type: FlowPanel
+      - components:
+        - name: label_2
+          properties: {text: 'Team: '}
+          type: Label
+        - event_bindings: {click: team_label_click}
+          layout_properties: {}
+          name: team_label
+          properties: {text: teamnavn}
+          type: Link
+        name: flow_panel_10
+        properties: {}
+        type: FlowPanel
+      layout_properties: {grid_position: 'RFCGDJ,QULDBO'}
+      name: flow_panel_3
+      properties: {align: center}
       type: FlowPanel
-    layout_properties: {grid_position: 'XCTPBS,SRACPT'}
-    name: flow_panel_3
-    properties: {align: center}
-    type: FlowPanel
+    layout_properties: {grid_position: 'WFKNPD,TTQPQG'}
+    name: outlined_card_2
+    properties:
+      background: theme:Secondary Container
+      role: elevated-card
+      spacing:
+        padding: ['2', null, '2', null]
+    type: ColumnPanel
   - components:
     - components:
       - event_bindings: {click: button_2_click}
@@ -427,6 +437,10 @@ components:
       name: trekning_button
       properties: {background: 'theme:Secondary Container', role: elevated-button, text: Trekningsliste}
       type: Button
+    - event_bindings: {click: admin_button_click}
+      name: admin_button
+      properties: {background: 'theme:Secondary Container', role: elevated-button, text: Admin, visible: false}
+      type: Button
     - event_bindings: {click: logout_click}
       layout_properties: {}
       name: logout
@@ -461,7 +475,7 @@ components:
     name: outlined_card_1
     properties: {background: 'theme:Secondary Container', role: elevated-card}
     type: ColumnPanel
-  layout_properties: {grid_position: 'LRHKJM,PNXCFA', row_background: ''}
+  layout_properties: {grid_position: 'XVRDAO,QYAODL'}
   name: loggbok_card
   properties: {background: '', role: tonal-card, visible: true}
   type: ColumnPanel
