--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -1,38 +1,47 @@
 components:
 - components:
-  - name: label_1
-    properties: {text: 'Sett poeng: '}
+  - layout_properties: {grid_position: 'IJXHKK,KEXAUF'}
+    name: ukedag_label
+    properties: {role: headline}
     type: Label
-  - data_bindings:
-    - {code: '', property: items, writeback: false}
-    name: poeng_drop
+  - components:
+    - name: label_1
+      properties: {text: 'Sett poeng: '}
+      type: Label
+    - data_bindings:
+      - {code: '', property: items, writeback: false}
+      name: poeng_drop
+      properties: {}
+      type: DropDown
+    layout_properties: {grid_position: 'AIBRTF,EYISMJ'}
+    name: flow_panel_1
     properties: {}
-    type: DropDown
-  layout_properties: {grid_position: 'KTISGG,KLEHOD'}
-  name: flow_panel_1
-  properties: {}
-  type: FlowPanel
-- components:
-  - layout_properties: {}
-    name: label_2
-    properties: {text: 'Aktivitet:'}
-    type: Label
-  - name: aktivitet_box
+    type: FlowPanel
+  - components:
+    - layout_properties: {}
+      name: label_2
+      properties: {text: 'Aktivitet:'}
+      type: Label
+    - name: aktivitet_box
+      properties: {}
+      type: TextBox
+    layout_properties: {grid_position: 'XZDMJK,GJAVBS'}
+    name: flow_panel_2
     properties: {}
-    type: TextBox
-  layout_properties: {grid_position: 'HHFBSC,KUFCBG'}
-  name: flow_panel_2
-  properties: {}
-  type: FlowPanel
-- components:
-  - event_bindings: {click: lagre_button_click}
-    layout_properties: {}
-    name: lagre_button
-    properties: {text: Lagre}
-    type: Button
-  layout_properties: {grid_position: 'WTGYCB,IXTFSQ'}
-  name: flow_panel_3
-  properties: {}
-  type: FlowPanel
+    type: FlowPanel
+  - components:
+    - event_bindings: {click: lagre_button_click}
+      layout_properties: {}
+      name: lagre_button
+      properties: {text: Lagre}
+      type: Button
+    layout_properties: {grid_position: 'LDAPRP,OKEEXD'}
+    name: flow_panel_3
+    properties: {}
+    type: FlowPanel
+  layout_properties: {grid_position: 'FDQCUI,CPDGKX'}
+  name: outlined_card_1
+  properties: {background: 'theme:Secondary Container', role: outlined-card}
+  type: ColumnPanel
 container: {type: ColumnPanel}
 is_package: true
