--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -7,8 +7,8 @@ components:
   - layout_properties: {grid_position: 'ILDDNC,ZIRYPF'}
     name: text_area_1
     properties:
-      height: 97.33331298828125
-      text: "29/3-25: Flyttet adminmeny til egen knapp som bare vises for adminbrukere. \nLage en side hvor bruker kan endre eget navn og team. Den kommer når bruker klikker på navnet sitt. "
+      height: 136.27273559570312
+      text: "29/3-25: Flyttet adminmeny til egen knapp som bare vises for adminbrukere. \nLage en side hvor bruker kan endre eget navn og team. Den kommer når bruker klikker på navnet sitt.\nLaget vindu for å registrere poeng og tekst på en dag, i stedet for å klikke opp ett og ett poeng .Mer logisk tror jeg.  "
     type: TextArea
   - layout_properties: {grid_position: 'BHFXMZ,LRACXB'}
     name: text_area_2
