--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -25,6 +25,9 @@ components:
     - name: aktivitet_box
       properties: {}
       type: TextBox
+    - name: ikon_dropdown
+      properties: {}
+      type: DropDown
     layout_properties: {grid_position: 'XZDMJK,GJAVBS'}
     name: flow_panel_2
     properties: {}
