--- a/anvil.yaml
+++ b/anvil.yaml
@@ -16,6 +16,9 @@ db_schema:
       name: deltager
       target: users
       type: link_single
+    - admin_ui: {order: 4, width: 200}
+      name: ikon
+      type: string
     server: full
     title: Aktivitet
   konkurranse:
