--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -89,6 +89,10 @@ components:
         name: flow_panel_10
         properties: {}
         type: FlowPanel
+      - layout_properties: {}
+        name: man_ikon
+        properties: {text: ''}
+        type: Button
       layout_properties: {grid_position: 'RFCGDJ,QULDBO'}
       name: flow_panel_3
       properties: {align: center}
