--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -89,10 +89,6 @@ components:
         name: flow_panel_10
         properties: {}
         type: FlowPanel
-      - layout_properties: {}
-        name: man_ikon
-        properties: {text: ''}
-        type: Button
       layout_properties: {grid_position: 'RFCGDJ,QULDBO'}
       name: flow_panel_3
       properties: {align: center}
@@ -407,6 +403,10 @@ components:
       name: flow_panel_6
       properties: {align: center}
       type: FlowPanel
+    - layout_properties: {column: 'null'}
+      name: man_ikon
+      properties: {text: ''}
+      type: Button
     layout_properties: {grid_position: 'LVOPXY,MUNUHX'}
     name: week_row_panel
     properties: {}
