--- a/anvil.yaml
+++ b/anvil.yaml
@@ -19,6 +19,9 @@ db_schema:
     - admin_ui: {order: 4, width: 200}
       name: ikon
       type: string
+    - admin_ui: {order: 5, width: 200}
+      name: beskrivelse
+      type: string
     server: full
     title: Aktivitet
   konkurranse:
