Created dumbbell-weight.svg, person-climbing-medium-dark-skin-tone.svg and weight-dumbbell.svg

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,11 @@
 unique_ids:
   assets:
+    dumbbell-weight.svg: '1743355564325854929689846.3279'
     lykkehjul.jpg: '174227380325212014709124.972933'
+    person-climbing-medium-dark-skin-tone.svg: '174335553944559656968956.79295'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
+    weight-dumbbell.svg: '1743355527178375434607964.21967'
   forms:
     Aktivitet: 6LHPGAY352WAAF56DS4UD744L2O457UK
     Aktivitet.Form2: '1741206122014695898164765.3148'
