Created IKONS/.gitkeep, IKONS/dumbbell-weight.svg, IKONS/frisbee.svg, IKONS/golf.svg and 8 more; Deleted dumbbell-weight.svg, person-climbing-medium-dark-skin-tone.svg and weight-dumbbell.svg

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,11 +1,20 @@
 unique_ids:
   assets:
-    dumbbell-weight.svg: '1743355564325854929689846.3279'
+    IKONS/.gitkeep: '1743355594372272686205521.62415'
+    IKONS/dumbbell-weight.svg: '1743355564325854929689846.3279'
+    IKONS/frisbee.svg: '1743355700704919087011902.6726'
+    IKONS/golf.svg: '1743355727919262871324065.16724'
+    IKONS/map-hiking.svg: '1743355714072969016449088.9861'
+    IKONS/person-climbing-medium-dark-skin-tone.svg: '174335553944559656968956.79295'
+    IKONS/skiing.svg: '1743355678623127394063589.40419'
+    IKONS/snowboarding.svg: '1743355629990788236049008.7643'
+    IKONS/swimming.svg: '1743355739987590917925523.7473'
+    IKONS/weight-dumbbell.svg: '1743355527178375434607964.21967'
+    IKONS/yoga (1).svg: '1743355688172175275813842.88403'
     lykkehjul.jpg: '174227380325212014709124.972933'
-    person-climbing-medium-dark-skin-tone.svg: '174335553944559656968956.79295'
+    running.svg: '1743355666691503448170893.892'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
-    weight-dumbbell.svg: '1743355527178375434607964.21967'
   forms:
     Aktivitet: 6LHPGAY352WAAF56DS4UD744L2O457UK
     Aktivitet.Form2: '1741206122014695898164765.3148'
