Created IKONS/person-climbing.svg; Edited settings; Deleted IKONS/person-climbing-medium-dark-skin-tone.svg

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,7 +5,7 @@ unique_ids:
     IKONS/frisbee.svg: '1743355700704919087011902.6726'
     IKONS/golf.svg: '1743355727919262871324065.16724'
     IKONS/map-hiking.svg: '1743355714072969016449088.9861'
-    IKONS/person-climbing-medium-dark-skin-tone.svg: '174335553944559656968956.79295'
+    IKONS/person-climbing.svg: '174335553944559656968956.79295'
     IKONS/skiing.svg: '1743355678623127394063589.40419'
     IKONS/snowboarding.svg: '1743355629990788236049008.7643'
     IKONS/swimming.svg: '1743355739987590917925523.7473'
