--- a/anvil.yaml
+++ b/anvil.yaml
@@ -113,7 +113,7 @@ db_schema:
     server: full
     title: Users
 dependencies: []
-metadata: {description: For Framo BIL, title: Aktivitetskonkurranse}
+metadata: {description: For Framo BIL, logo_img: 'asset:running.svg', title: Aktivitetskonkurranse}
 name: Aktivitet
 package_name: Aktivitet
 renamed: true
