Created IKONS/yoga .svg; Edited EgendefinertIkonVelger; Deleted IKONS/yoga (1).svg

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -10,7 +10,7 @@ unique_ids:
     IKONS/snowboarding.svg: '1743355629990788236049008.7643'
     IKONS/swimming.svg: '1743355739987590917925523.7473'
     IKONS/weight-dumbbell.svg: '1743355527178375434607964.21967'
-    IKONS/yoga (1).svg: '1743355688172175275813842.88403'
+    IKONS/yoga .svg: '1743355688172175275813842.88403'
     lykkehjul.jpg: '174227380325212014709124.972933'
     running.svg: '1743355666691503448170893.892'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
