--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -131,6 +131,7 @@ components:
               margin: [null, null, '0', null]
               padding: [null, null, '0', null]
             text: Mandag
+            tooltip: ''
           type: Label
         - event_bindings: {click: man_button_click}
           layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
@@ -162,7 +163,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: man_column_panel
@@ -170,6 +171,7 @@ components:
           role: elevated-card
           spacing:
             padding: ['0', '15', '0', '15']
+          tooltip: ''
         type: ColumnPanel
       - components:
         - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
@@ -208,7 +210,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: tir_column_panel
@@ -254,7 +256,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: ons_column_panel
@@ -300,7 +302,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: tor_column_panel
@@ -351,7 +353,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: fre_column_panel
@@ -397,7 +399,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: lor_column_panel
@@ -443,7 +445,7 @@ components:
               margin: ['0', null, '0', null]
               padding: ['0', null, '0', null]
             text: ''
-            visible: false
+            visible: true
           type: Label
         layout_properties: {}
         name: son_column_panel
@@ -503,31 +505,6 @@ components:
     name: flow_panel_7
     properties: {align: center}
     type: FlowPanel
-  - components:
-    - components:
-      - layout_properties: {}
-        name: rich_text_2
-        properties:
-          align: left
-          content: |2-
-                <ul>
-                  <li><strong>1 poeng:</strong> 0,5 time aktiv trening eller 8000 skritt</li>
-                  <li><strong>2 poeng:</strong> 1 time aktiv trening</li>
-                  <li><strong>3 poeng:</strong> 1,5 time aktiv trening</li>
-                </ul>
-          format: restricted_html
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-        type: RichText
-      layout_properties: {grid_position: 'RHFXDS,SKNNKF'}
-      name: flow_panel_8
-      properties: {align: center}
-      type: FlowPanel
-    layout_properties: {grid_position: 'FDXMTZ,NCSNWW'}
-    name: outlined_card_1
-    properties: {background: 'theme:Secondary Container', role: elevated-card}
-    type: ColumnPanel
   layout_properties: {grid_position: 'XVRDAO,QYAODL'}
   name: loggbok_card
   properties: {background: '', role: tonal-card, visible: true}
