--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,12 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'FMUCET,YQLPCI'}
+    name: text_area_3
+    properties:
+      height: 106.85711669921875
+      text: "30/3: La til ikon for aktiviteter. Må legge til flere og bytte ut noen senere. \nLa til beskrivelse som kommer opp som tooltip når musen peker på en dag. Den kommer ikke opp på mobil. \n"
+    type: TextArea
   - layout_properties: {grid_position: 'ILDDNC,ZIRYPF'}
     name: text_area_1
     properties:
